--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="content-section" id="profil">
                     <div class="respon">
                         <h2>Profil</h2>
-                        <p>Étudiant de 18 ans en première année de BTS SIO, en spécialité SLAM.
+                        <p>Étudiant en première année de BTS SIO, en spécialité SLAM.
                             <br> Actuellement en recherche d'une formation afin d'acquérir de l'expérience.
                         <h2>Qualités</h2>
                         - Travail en équipe <br>
@@ -94,7 +94,7 @@
                     <h2>Compétences</h2>
                     <p>- HTML <br>
                         - CSS <br>
-                        - JavaScript en formation <br>
+                        - JavaScript <br>
                         - Photoshop <br>
                         - Première Pro <br>
                         <br>
