--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                     <p>Voici mes récents projets :</p> <br>
                     <div class="OUI">
                         <img class="Oui" src="Images/Capture.PNG" alt="Présentation">
-                        <img class="Oui" src="Images/Oui2.jpg" alt="Présentation">
-                        <img class="Oui" src="Images/Oui.jpg" alt="Présentation">
+                        <img class="Oui" src="Images/Capture4.png" alt="Présentation">
                     </div>
                 </div>
             </div>
