--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         - Travail en équipe <br>
                         - Curieux <br>
                         - Sérieux <br>
+                        - Sens de l'organisation <br>
                         </p>
                         <a class="CV" download="CV LOPEZ RAMIREZ Michel.pdf" href="CV LOPEZ RAMIREZ Michel.pdf"
                             alt="lien"> ➞ Télécharger mon CV</a>
@@ -94,6 +95,7 @@
                     <h2>Compétences</h2>
                     <p>- HTML <br>
                         - CSS <br>
+                        - PHP <br>
                         - JavaScript <br>
                         - Photoshop <br>
                         - Première Pro <br>
@@ -101,7 +103,7 @@
                     <h2>Langues</h2>
                     - Français <br>
                     - Espagnol (Maternelle) <br>
-                    - Anglais B1
+                    - Anglais B2
                     </p>
                 </div>
                 <div class="content-section" id="sio">
